[gd_scene load_steps=8 format=3 uid="uid://dgetkxutmuyh5"]

[ext_resource type="Script" path="res://Scenes/Stuff/MovingPlats/mountain_moving_plat.gd" id="1_txdcd"]
[ext_resource type="PackedScene" uid="uid://yp7k6wpd5yv5" path="res://Scenes/Stuff/MovingPlats/MagicPlat.tscn" id="2_tcnxs"]
[ext_resource type="LabelSettings" uid="uid://cifcsfg2m6elt" path="res://UI_Theme/speedometer.tres" id="3_6f6tq"]
[ext_resource type="Script" path="res://Scenes/Stuff/MovingPlats/plat_speedometer.gd" id="4_hyq1a"]
[ext_resource type="Script" path="res://Scenes/Stuff/MovingPlats/PlatTrace.gd" id="5_uhi0v"]

[sub_resource type="Curve" id="Curve_r2f0t"]
_data = [Vector2(0, 0), 0.0, -0.5, 0, 0, Vector2(0.5, 1), -0.5, 0.5, 0, 0, Vector2(1, 0), 0.5, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Curve" id="Curve_651lc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.05, 0), 0.0, 0.0, 0, 0, Vector2(0.05001, 1), 0.0, 0.0, 0, 0, Vector2(0.49999, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(0.54999, 0), 0.0, 0.0, 0, 0, Vector2(0.55, 1), 0.0, 0.0, 0, 0, Vector2(0.75, 1), 0.0, 0.0, 0, 0, Vector2(0.94999, 1), 0.0, 0.0, 0, 0, Vector2(0.95, 0), 0.0, 0.0, 0, 0]
point_count = 10
metadata/_snap_enabled = true
metadata/_snap_count = 20

[node name="MovingPlat" type="Path2D" node_paths=PackedStringArray("progress_node")]
script = ExtResource("1_txdcd")
progress_node = NodePath("PathFollow2D")
movement_curve = SubResource("Curve_r2f0t")
avg_velocity = 90.0
launch_velocity = 80.0
launch_curve = SubResource("Curve_651lc")
launch_multi = Vector2(2.75, 1.5)

[node name="MagicPlat" parent="." instance=ExtResource("2_tcnxs")]
position = Vector2(2.08165e-12, -13)

[node name="Debug" type="Node2D" parent="MagicPlat"]
visible = false
position = Vector2(-2.08165e-12, 13)

[node name="Label" type="Label" parent="MagicPlat/Debug" node_paths=PackedStringArray("plat")]
offset_left = 20.0
offset_top = -9.0
offset_right = 39.0
offset_bottom = 5.0
text = "100"
label_settings = ExtResource("3_6f6tq")
script = ExtResource("4_hyq1a")
plat = NodePath("../../..")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
v_offset = 3.0
rotates = false
cubic_interp = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
position = Vector2(2.08165e-12, -13)
remote_path = NodePath("../../MagicPlat")
update_rotation = false
update_scale = false

[node name="MovingPlatTrace" type="Node2D" parent="."]
z_index = -1
position = Vector2(2.08165e-12, -3)
script = ExtResource("5_uhi0v")
sample_distance = 12

[connection signal="cycle_finished" from="." to="." method="_on_cycle_finished"]
[connection signal="player_landed" from="MagicPlat" to="." method="_on_magic_plat_player_landed"]
[connection signal="player_left" from="MagicPlat" to="." method="_on_magic_plat_player_left"]
